# claude-secretary

./: .gitignore  .pii-patterns  AGENTS.md  CONTRIBUTING.md  QUICK_START.md  README.md  README_TEST_HARNESS.md  TODO.md  campaign.yaml  config.example.yaml  config.yaml  goals.yaml  pyproject.toml  run-tests-safe.ps1  run-tests.ps1  start-watcher.ps1
campaigns/: 10x-copilot-parity.yaml  10x-efficiency.yaml  10x-research-parallel.yaml  ab-oracle-vs-sonnet.yaml  autoresearch.yaml  benchmark-optimizations.yaml  billing-efficiency.yaml  copilot-collab-v3.yaml  copilot-collab-v4.yaml  copilot-collab.yaml  daily-planner.yaml  deep-efficient-opus.yaml  deep-mode-test.yaml  deep-self-improve-test.yaml  density-benchmark.yaml  efficiency-sprint.yaml  email-triage.yaml  impl-density-v4.yaml  impl-density-v5.yaml  long-horizon-opus.yaml  long-horizon-research.yaml  multi-instance.yaml  optimize-paid-billing.yaml  oracle-bench-opus.yaml  oracle-email-test-v2.yaml  oracle-email-test.yaml  oracle-hint-test.yaml  oracle-production-test.yaml  oracle-test.yaml  self-build.yaml  self-improve-v2.yaml  self-monitor.yaml  self-optimize-opus.yaml  stress-test-quality.yaml  textgrad_autoresearch.yaml
docs/: COST_ALERT_SPEC.md  HARNESS_CHECKLIST.md  HARNESS_EXAMPLE_OUTPUT.md  PROMPT_EVOLUTION_SCHEMA.md  STAKEHOLDER_SIGN_OFF.md  TEST_HARNESS_TEMPLATE.md  WEB_DASHBOARD_PLAN.md  task-batching-integration.md
examples/: prompt_evolution_demo.py
hooks/: pre-commit  pre-commit.py
research/: cycle-notes.md  implementation-log.md  improvement-plan.md  latest_research_summary.json
(+226 files in other folders)
